@@ -92,3 +92,4 @@
  5-Dec-2020  - V0.91 Wrapped requests.Session() in a context manager.
  7-Dec-2020  - V0.92 Update diagnostics logging in ExecUtils()
 13-Dec-2020  - V0.93 Add runShell() method to ExecUtils()
+14-Dec-2020  - V0.94 Add option to suppress stderr in ExecUtils()
